alignment issue fixed

--- a/assets/css/rtl.css
+++ b/assets/css/rtl.css
@@ -837,7 +837,7 @@ a:link
 
 #audit-trail-wrapper .main .info .bio 
 {    
-    padding-right: 24px;    
+    padding-right: 34px;    
     margin-top: -4px;    
     width: 370px;    
     box-sizing: border-box;
